1.5.2 redesign charge console workbench
